# git-credential-aws-secrets

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
git_credential_aws_secrets/: credentials.py
