[metadata]
name = git_credential_aws_secrets
version = 0.0.2
license = MIT
license_files = LICENSE
author = Matt Madison
author_email = matt@madison.systems

[options]
packages = find:
install_requires =
    botocore
    aws-secretsmanager-caching

[options.entry_points]
console_scripts =
    git-credential-aws-secrets = git_credential_aws_secrets.credentials:main
